--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "dev:all": "concurrently \"php artisan serve\" \"vite\""
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "autoprefixer": "10.4.21",
+        "axios": "^1.12.2",
+        "concurrently": "9.0.1",
+        "laravel-vite-plugin": "2.0.0",
+        "postcss": "8.5.6",
+        "tailwindcss": "^4.1.13",
+        "vite": "^7.1.6"
     }
 }
