--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "dev:all": "concurrently \"php artisan serve\" \"vite\""
+        "dev:all": "concurrently \"php artisan serve --host=localhost --port=8000\" \"vite\""
     },
     "devDependencies": {
         "autoprefixer": "10.4.21",
